# aggiecanvas

./: .dockerignore  .env.example  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml  nginx.conf
bot/: README.md  bun.lockb  package.json  pyproject.toml  run.sh
bot/bot/: __main__.py
bot/client/: README.md  setup.py
bot/client/docs/: AuthAggieBody.md  AuthAggieBody1.md  AuthAggieBody2.md  DefaultApi.md  GridBody.md  GridBody1.md  GridBody2.md  GridIdBody.md  GridIdBody1.md  GridIdBody2.md  IdPixelBody.md  IdPixelBody1.md  IdPixelBody2.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse2002.md  InlineResponse2003.md
bot/client/swagger_client/: __init__.py  api_client.py  configuration.py  rest.py
bot/client/swagger_client/api/: default_api.py
bot/client/swagger_client/models/: __init__.py  auth_aggie_body.py  auth_aggie_body1.py  auth_aggie_body2.py  grid_body.py  grid_body1.py  grid_body2.py  grid_id_body.py  grid_id_body1.py  grid_id_body2.py  id_pixel_body.py  id_pixel_body1.py  id_pixel_body2.py  inline_response200.py  inline_response2001.py  inline_response2002.py  (+1 more)
bot/client/test/: test_auth_aggie_body.py  test_auth_aggie_body1.py  test_auth_aggie_body2.py  test_default_api.py  test_grid_body.py  test_grid_body1.py  test_grid_body2.py  test_grid_id_body.py  test_grid_id_body1.py  test_grid_id_body2.py  test_id_pixel_body.py  test_id_pixel_body1.py  test_id_pixel_body2.py  test_inline_response200.py  test_inline_response2001.py  test_inline_response2002.py  test_inline_response2003.py
bot/src/: args.ts  index.ts
(+54 files in other folders)
