[tool.poetry]
name = "bot"
version = "0.1.0"
description = "A bot for the AggieCanvas service"
authors = ["Elizabeth Hunt <elizabeth.hunt@simponic.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
swagger-client = {path = "client"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
